@@ -172,12 +172,13 @@ public enum ConfigNodes {
             PLUGIN_INTERFACING("plugin.interfacing","", ""),
             PLUGIN_USING_ESSENTIALS("plugin.interfacing.using_essentials","false",
             		"# Enable using_essentials if you are using cooldowns in essentials for teleports."),
-            PLUGIN_USING_REGISTER("plugin.interfacing.using_register","true",
-            		"# Enable if you have the Register plugin to manage your Economy plugin.",
-            		"# Register supports: iConomy5, iConomy6, EssentialsEco, BOSEconomy.",
+            PLUGIN_USING_ECONOMY("plugin.interfacing.using_economy","true",
+            		"# This will attempt to use Register (if present)",
+            		"# Then it will attempt to access iConomy 5.01 directly",
+            		"# Enable if you have either iConomy 5.01, or Register.jar to",
+            		"# support: iConomy5, iConomy6, EssentialsEco, BOSEconomy.",
             		"# https://github.com/iConomy/Register/tree/master/dist"),
-            PLUGIN_USING_ICONOMY("plugin.interfacing.using_iconomy","true",
-            		"# Enable to retain iConomy 5 legacy support (overridden by the using_register setting)."),
+
             PLUGIN_USING_QUESTIONER("plugin.interfacing.using_questioner","true",
             		"# Enable using_questioner if you are using questioner to send/receive invites to towns/nations.",
             		"# See http://code.google.com/a/eclipselabs.org/p/towny/wiki/Questioner for more info."),
